fixed some bugs with includes/excludes, added progress bars and simplfied output, and offer more debug output